# earthfinder

./: .gitignore  Cargo.toml  ffmpeg.sh
kernels/: _template.wgsl  main_pass.wgsl  main_pass_add.wgsl  main_pass_zoom.wgsl  main_pass_zoom_bins.wgsl
src/: cpu_one_frame.rs  data.rs  gen_mask.rs  gpu_all.rs  gpu_one_frame.rs  main.rs  mask.rs  preprocess.rs  raw.rs  render.rs  tiles_grad.rs
src/gpu/: algorithm.rs  framework.rs  mod.rs  state.rs
