[package]
name = "earthfinder"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { version = "0.25.4", default-features = false, features = ["tiff", "png"] }
walkdir = "2.5.0"
oklab = "1.1.2"
rustiff = "0.1.2"
rayon = "1.10.0"
ordered-float = "4.4.0"
lazy_static = "1.5.0"
rustc-hash = "2.0.0"
wgpu = "0.20.0"
wgpu_text = "0.8.8"
bytemuck = "1.19.0"
crossbeam = "0.8.4"
nanoserde = "0.1.37"
slotmap = "1.0.7"
pollster = "0.4.0"