[package]
name = "earthfinder"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { version = "=0.25.2", default-features = false, features = ["png", "jpeg"] }
zune-jpeg = "0.4.13"
walkdir = "2.5.0"
oklab = "1.1.2"
rayon = "1.10.0"
ordered-float = "4.4.0"
lazy_static = "1.5.0"
rustc-hash = "2.0.0"
wgpu = { version = "0.20.0", features = ["spirv"] }
bytemuck = "1.19.0"
crossbeam = "0.8.4"
nanoserde = "0.1.37"
slotmap = "1.0.7"
pollster = "0.4.0"
crossbeam-channel = "0.5.13"
renderdoc = "0.12.1"
half = { version = "2.4.1", default-features = false }

[dev-dependencies]
fastrand = "2.1.1"